--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,15 @@ go:
   - 1.11.x # This uses automatically the latest version of go
 
 install:
-  - go get github.com/spf13/hugo # This provides the latest version of Hugo to Travis CI
+  - mkdir $HOME/src
+  - cd $HOME/src
+  - git clone https://github.com/gohugoio/hugo.git
+  - cd hugo
+  - git checkout v0.54.0
+  - go install --tags extended
 
-script:  
+script:
+  - cd $TRAVIS_BUILD_DIR 
   - rm -rf public || exit 0
   - hugo # This commands builds your website on travis
   - echo 'blog.secondstate.io' > public/CNAME
